# Trader_iran

./: .gitignore  Jam Petr.-i.csv  Req.txt  Trader.ipynb  Trader_report.html  main.py  pyproject.toml
