[project]
name = "trader-iran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
